Added curvature, ready for cluster run

--- a/2011RA/FiscalPolicy/GolosovProjectCode/Tom Example/BGP/Tex/CheckDerivatives.tex
+++ b/2011RA/FiscalPolicy/GolosovProjectCode/Tom Example/BGP/Tex/CheckDerivatives.tex
@@ -1,25 +1,25 @@
 \begin{tiny}\begin{tabular}{|c|c|c|}
 \hline
 \textbf{$c_1(1)$}&\textbf{$c_1(2)$}&\textbf{$c_2(1)$}\\\hline
-3.4e-10&3.1e-09&8.9e-09\\\hline
--6.6e-10&4.4e-08&2.4e-08\\\hline
--8e-09&-1.7e-09&-1.1e-08\\\hline
--9.3e-10&-6.1e-09&1.4e-09\\\hline
-3e-09&9.8e-09&3e-09\\\hline
--2.8e-11&-9.5e-09&-1.1e-09\\\hline
-8.9e-09&8.1e-09&-7.9e-09\\\hline
-2.1e-06&-7.7e-07&9.5e-07\\\hline
-2.1e-10&-9.1e-09&4.4e-09\\\hline
-1e-08&-1.5e-09&-1.3e-08\\\hline
-1.3e-06&-4.1e-08&1e-06\\\hline
-9.9e-09&3.9e-09&-5.2e-09\\\hline
-2.7e-10&-4.8e-09&5.3e-09\\\hline
-3.7e-09&-3.1e-11&-1.2e-08\\\hline
--8.6e-08&2.5e-09&8.5e-08\\\hline
--7.1e-08&9.4e-08&-2e-07\\\hline
-1.9e-06&-1.6e-06&4.4e-07\\\hline
--5.3e-09&2.6e-09&-5.8e-09\\\hline
-3e-08&-1.6e-08&-6.9e-09\\\hline
-3.6e-08&7.1e-09&-2.5e-08\\\hline
+-0.00013&-0.00022&3.8e-05\\\hline
+-7.9e-05&-4.2e-05&-0.00043\\\hline
+-4.6e-05&-0.00011&-5e-05\\\hline
+-0.00027&-0.0002&-0.00052\\\hline
+1.1e-05&-4e-05&-0.00012\\\hline
+4.6e-06&1.1e-05&-0.00032\\\hline
+-1.2e-06&8.1e-06&-0.00033\\\hline
+-2.3e-06&1e-05&-0.00032\\\hline
+4.9e-06&-4.6e-05&-9.3e-05\\\hline
+-4.6e-05&-1.7e-05&-0.00035\\\hline
+1.5e-05&-3.2e-05&-0.00012\\\hline
+3.5e-05&1.1e-05&-0.00022\\\hline
+-0.00019&-0.00013&-0.00051\\\hline
+-0.00011&-0.0002&3.6e-05\\\hline
+2.2e-05&-1.9e-05&-0.00012\\\hline
+-0.00029&-0.00021&-0.00052\\\hline
+3.5e-05&8.9e-06&-0.00019\\\hline
+-4.4e-05&-0.00011&-2.6e-05\\\hline
+-0.00035&-0.00027&-0.00058\\\hline
+-4.3e-06&7.7e-06&-0.00034\\\hline
 \end{tabular}
 \end{tiny}
