Updated simulation code

--- a/2011RA/FiscalPolicy/GolosovProjectCode/Tom Example/BGP/Tex/CheckDerivatives.tex
+++ b/2011RA/FiscalPolicy/GolosovProjectCode/Tom Example/BGP/Tex/CheckDerivatives.tex
@@ -1,25 +1,25 @@
 \begin{tiny}\begin{tabular}{|c|c|c|}
 \hline
 \textbf{$c_1(1)$}&\textbf{$c_1(2)$}&\textbf{$c_2(1)$}\\\hline
--0.00013&-0.00022&3.8e-05\\\hline
--7.9e-05&-4.2e-05&-0.00043\\\hline
--4.6e-05&-0.00011&-5e-05\\\hline
--0.00027&-0.0002&-0.00052\\\hline
-1.1e-05&-4e-05&-0.00012\\\hline
-4.6e-06&1.1e-05&-0.00032\\\hline
--1.2e-06&8.1e-06&-0.00033\\\hline
--2.3e-06&1e-05&-0.00032\\\hline
-4.9e-06&-4.6e-05&-9.3e-05\\\hline
--4.6e-05&-1.7e-05&-0.00035\\\hline
-1.5e-05&-3.2e-05&-0.00012\\\hline
-3.5e-05&1.1e-05&-0.00022\\\hline
--0.00019&-0.00013&-0.00051\\\hline
--0.00011&-0.0002&3.6e-05\\\hline
-2.2e-05&-1.9e-05&-0.00012\\\hline
--0.00029&-0.00021&-0.00052\\\hline
-3.5e-05&8.9e-06&-0.00019\\\hline
--4.4e-05&-0.00011&-2.6e-05\\\hline
--0.00035&-0.00027&-0.00058\\\hline
--4.3e-06&7.7e-06&-0.00034\\\hline
+-0.0018&-0.0015&-0.0052\\\hline
+2.8e-05&-4.9e-05&-0.0017\\\hline
+-0.0027&-0.0024&-0.0064\\\hline
+-0.00097&-0.00079&-0.004\\\hline
+1.2e-05&-4.6e-07&-0.0017\\\hline
+-0.0021&-0.0017&-0.0053\\\hline
+-0.0017&-0.0014&-0.005\\\hline
+-0.00031&-0.00028&-0.003\\\hline
+-4.3e-05&-2e-05&-0.002\\\hline
+-0.00011&-9e-05&-0.0024\\\hline
+-2.1e-05&-1.1e-05&-0.0019\\\hline
+2.6e-05&-7.6e-05&-0.0017\\\hline
+2e-05&-8.4e-06&-0.0017\\\hline
+-0.0037&-0.0032&-0.0072\\\hline
+2.7e-05&-3.9e-05&-0.0017\\\hline
+-4.4e-05&-0.00027&-0.0017\\\hline
+-0.00027&-0.00024&-0.0029\\\hline
+4.6e-06&-0.00012&-0.0017\\\hline
+-0.00096&-0.0008&-0.004\\\hline
+1.9e-05&-2.2e-05&-0.0017\\\hline
 \end{tabular}
 \end{tiny}
