Calibrated Parameters to match Golosov Moments

--- a/2011RA/FiscalPolicy/GolosovProjectCode/Tom Example/BGP/Tex/test/FallingTaxes/SimulationMoments.tex
+++ b/2011RA/FiscalPolicy/GolosovProjectCode/Tom Example/BGP/Tex/test/FallingTaxes/SimulationMoments.tex
@@ -1,13 +1,13 @@
 \begin{tiny}\begin{tabular}{|l|c|c|c|c|}
 \hline
 &\textbf{Mean}&\textbf{Std}&\textbf{AutoCorr}&\textbf{Corr with g}\\\hline
-\textbf{Shock : $g$}&0.1618&0.0098&0.1507&1.0000\\\hline
-\textbf{Labor Taxes: $\tau$}&-Inf&NaN&NaN&NaN\\\hline
-\textbf{Transfers :$T$}&-Inf&NaN&NaN&NaN\\\hline
-\textbf{Relative assets  :$\tilde{b}_2$}&Inf&NaN&NaN&NaN\\\hline
-\textbf{After-tax income (Agent 1)}&-Inf&NaN&NaN&NaN\\\hline
-\textbf{After-tax income (Agent 2)}&NaN&NaN&NaN&NaN\\\hline
-\textbf{Income from assets (Agent 1)}&-Inf&NaN&NaN&NaN\\\hline
-\textbf{Gross Int. rates}&1.0446&0.1424&0.1981&0.0671\\\hline
+\textbf{Shock : $g$}&0.1600&0.0100&0.0006&1.0000\\\hline
+\textbf{Labor Taxes: $\tau$}&0.2709&0.0106&0.9825&0.1579\\\hline
+\textbf{Transfers :$T$}&0.0621&0.0081&0.5733&-0.6345\\\hline
+\textbf{Relative assets  :$\tilde{b}_2$}&-0.5184&0.1237&0.9987&-0.0256\\\hline
+\textbf{After-tax income (Agent 1)}&0.9035&0.0113&0.9334&-0.2843\\\hline
+\textbf{After-tax income (Agent 2)}&0.4747&0.0051&0.3796&-0.8045\\\hline
+\textbf{Income from assets (Agent 1)}&0.0216&0.0070&0.5757&0.6555\\\hline
+\textbf{Gross Int. rates}&1.0417&0.0086&0.0002&0.9999\\\hline
 \end{tabular}
 \end{tiny}
